Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-4952

Modified ssl_read feedback value break all the time error.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.13.0
    • 0.14.0
    • C glib - Library
    • None
    • thrift-master

    Description

      when we call this SSL_read fuction "bytes = SSL_read(ssl_socket->ssl, buf, len) ", bytes defined guint , if SSL_read fuction returns a negative number, it will be converted to a large int number, which will break all the time.

      Considering the read field size of SSL,so i think change type from 'guint' to 'gint32' is enough.

      Attachments

        Issue Links

          Activity

            People

              pengzhouhu pengzhouhu
              pengzhouhu pengzhouhu
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m