THRIFT-4952 Modified ssl_read feedback value break all the time error. Client: c_glib Patch: pengzhouhu <pengzhouhu@huawei.com>

This closes #1869